--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,6 @@ edition = "2021"
 lalrpop = "0.20.2"
 
 [dependencies]
+chrono = "0.4.38"
 koopa = "0.0.7"
 lalrpop-util = { version = "0.20.2", features = ["lexer"] }
